--- a/KatlaSport.WebApi/packages.config
+++ b/KatlaSport.WebApi/packages.config
@@ -1,34 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package hiveId="Autofac" version="4.8.0" targetFramework="net471" />
-  <package hiveId="Autofac.WebApi2" version="4.1.0" targetFramework="net471" />
-  <package hiveId="AutoMapper" version="6.2.2" targetFramework="net471" />
-  <package hiveId="EntityFramework" version="6.2.0" targetFramework="net47" />
-  <package hiveId="FluentValhiveIdation" version="7.0.0" targetFramework="net471" />
-  <package hiveId="FluentValhiveIdation.WebApi" version="7.0.0" targetFramework="net471" />
-  <package hiveId="FluentValhiveIdation.WebApi-Signed" version="7.0.0" targetFramework="net471" />
-  <package hiveId="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net47" />
-  <package hiveId="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net47" />
-  <package hiveId="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net47" />
-  <package hiveId="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net47" />
-  <package hiveId="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net47" />
-  <package hiveId="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net47" />
-  <package hiveId="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net47" />
-  <package hiveId="Microsoft.AspNet.Cors" version="5.2.6" targetFramework="net471" />
-  <package hiveId="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net47" />
-  <package hiveId="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net47" />
-  <package hiveId="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net47" />
-  <package hiveId="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net471" />
-  <package hiveId="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net471" />
-  <package hiveId="Microsoft.AspNet.WebApi.Cors" version="5.2.6" targetFramework="net471" />
-  <package hiveId="Microsoft.AspNet.WebApi.Versioning" version="2.3.0" targetFramework="net471" />
-  <package hiveId="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net47" />
-  <package hiveId="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net47" />
-  <package hiveId="Microsoft.CodeDom.ProvhiveIders.DotNetCompilerPlatform" version="1.0.8" targetFramework="net47" />
-  <package hiveId="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net47" developmentDependency="true" />
-  <package hiveId="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
-  <package hiveId="Newtonsoft.Json" version="7.0.1" targetFramework="net471" />
-  <package hiveId="Swashbuckle" version="5.6.0" targetFramework="net471" />
-  <package hiveId="Swashbuckle.Core" version="5.6.0" targetFramework="net471" />
-  <package hiveId="WebActivatorEx" version="2.0" targetFramework="net471" />
+  <package hiveSectionId="Autofac" version="4.8.0" targetFramework="net471" />
+  <package hiveSectionId="Autofac.WebApi2" version="4.1.0" targetFramework="net471" />
+  <package hiveSectionId="AutoMapper" version="6.2.2" targetFramework="net471" />
+  <package hiveSectionId="EntityFramework" version="6.2.0" targetFramework="net47" />
+  <package hiveSectionId="FluentValhiveSectionIdation" version="7.0.0" targetFramework="net471" />
+  <package hiveSectionId="FluentValhiveSectionIdation.WebApi" version="7.0.0" targetFramework="net471" />
+  <package hiveSectionId="FluentValhiveSectionIdation.WebApi-Signed" version="7.0.0" targetFramework="net471" />
+  <package hiveSectionId="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net47" />
+  <package hiveSectionId="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net47" />
+  <package hiveSectionId="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net47" />
+  <package hiveSectionId="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net47" />
+  <package hiveSectionId="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net47" />
+  <package hiveSectionId="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net47" />
+  <package hiveSectionId="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net47" />
+  <package hiveSectionId="Microsoft.AspNet.Cors" version="5.2.6" targetFramework="net471" />
+  <package hiveSectionId="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net47" />
+  <package hiveSectionId="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net47" />
+  <package hiveSectionId="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net47" />
+  <package hiveSectionId="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net471" />
+  <package hiveSectionId="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net471" />
+  <package hiveSectionId="Microsoft.AspNet.WebApi.Cors" version="5.2.6" targetFramework="net471" />
+  <package hiveSectionId="Microsoft.AspNet.WebApi.Versioning" version="2.3.0" targetFramework="net471" />
+  <package hiveSectionId="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net47" />
+  <package hiveSectionId="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net47" />
+  <package hiveSectionId="Microsoft.CodeDom.ProvhiveSectionIders.DotNetCompilerPlatform" version="1.0.8" targetFramework="net47" />
+  <package hiveSectionId="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net47" developmentDependency="true" />
+  <package hiveSectionId="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
+  <package hiveSectionId="Newtonsoft.Json" version="7.0.1" targetFramework="net471" />
+  <package hiveSectionId="Swashbuckle" version="5.6.0" targetFramework="net471" />
+  <package hiveSectionId="Swashbuckle.Core" version="5.6.0" targetFramework="net471" />
+  <package hiveSectionId="WebActivatorEx" version="2.0" targetFramework="net471" />
 </packages>
